added async/sync demo

--- a/week5/hw_preview_scheduler/index.html
+++ b/week5/hw_preview_scheduler/index.html
@@ -46,6 +46,12 @@
           </div>
       </div>
 
+      <h1>dwadaw</h1>
+      <h1>dwadaw</h1>
+      <h1>dwadaw</h1>
+      <h1>dwadaw</h1>
+      <h1>dwadaw</h1>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
