--- a/week10/testing-app/src/html-templates/main.html
+++ b/week10/testing-app/src/html-templates/main.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- load bootstrap -->
-</head>
-<body>
-    
-    <section>
-        <h1>My Employees</h1>
-    </section>
 
-    <div class="card">
-        <div class="card-title">{{ name }}</div>
-    </div>
 
-    {{ code_injection }}
-</body>
-</html>
+
+<div class="card">
+    <div class="card-title">{{ name }}</div>
+    <div class="card-title">{{ id }}</div>
+    <div class="card-title">{{ role }}</div>
+
+    <div class="card-title">{{ other }}</div>
+
+</div>
+
